b=391583, DoesARGBImageDataHaveAlpha is slow, r=stuart,a=me